change site name

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Running Version</title>
+    <title>Yih Reng's Site</title>
 </head>
 <body>
     <canvas class="webgl"></canvas>
@@ -12,11 +12,9 @@
 
         <header>
           <h1>Hi, I'm Yih Reng!</h1>
-          <!-- <p>🚀 Welcome to my website!</p> -->
         </header>
   
         <section>
-          <!-- <h2>📜 Manifesto</h2> -->
           <h2>About Me</h2>
           <p>
             I'm an aspiring software engineer interested in Computer Graphics and Spatial Computing. Whilst all forms of software engineering are cool, I think that graphics programming is the ultimate form of wizardry. I also deeply believe in the potential of AR glasses in becoming our go-to device, though they aren't quite feasible yet!  
@@ -37,7 +35,6 @@
 
             <h3>Zombie in your house</h3>
             <p>Cheesy attempt at building a typical horror game to be experienced in VR. The twist is that the game's background is your actual house! Built mostly to test the Quest 2's video passthrough capabilities. Inspired by better examples such as Hauntify.</p>
-
         </section>
   
         <blockquote>
