--- a/src/index.html
+++ b/src/index.html
@@ -4,44 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yih Reng's Site</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <canvas class="webgl"></canvas>
 
     <main>
 
-        <header>
-          <h1>Hi, I'm Yih Reng!</h1>
-        </header>
-  
-        <section>
-          <h2>About Me</h2>
-          <p>
-            I'm an aspiring software engineer interested in Computer Graphics and Spatial Computing. Whilst all forms of software engineering are cool, I think that graphics programming is the ultimate form of wizardry. I also deeply believe in the potential of AR glasses in becoming our go-to device, though they aren't quite feasible yet!  
-          </p>
-          <p>
-            I'm currently a first year student at the Singapore University of Technology and Design.  
-          </p>
-          <p>
-            Outside of work, I enjoy reading a good book be it fiction or non-fiction!
-          </p>
-        </section>
-  
-        <section>
-          <h2>Projects</h2>
+      <header>
+        <h1>Hi, I'm Yih Reng!</h1>
+      </header>
 
-            <h3>Puzzle Assembly</h3>
-            <p>A 3D puzzle solving game prototype experienced in VR. Like tetris except well, its 3D. Built with Unity and the Oculus SDK, making use of the Interaction SDK to perform the complex hand tracking aspects of the project. Inspired by Cubism.</p>
+      <section>
+        <h2>About Me</h2>
+        <p>
+          I'm an aspiring software engineer interested in Computer Graphics and Spatial Computing. Whilst all forms of software engineering are cool, I think that graphics programming is the ultimate form of wizardry. I also deeply believe in the potential of AR glasses in becoming our go-to device, though they aren't quite feasible yet!  
+        </p>
+        <p>
+          I'm currently a first year student at the Singapore University of Technology and Design.  
+        </p>
+        <p>
+          Outside of work, I enjoy reading a good book be it fiction or non-fiction!
+        </p>
+      </section>
 
-            <h3>Zombie in your house</h3>
-            <p>Cheesy attempt at building a typical horror game to be experienced in VR. The twist is that the game's background is your actual house! Built mostly to test the Quest 2's video passthrough capabilities. Inspired by better examples such as Hauntify.</p>
-        </section>
-  
-        <blockquote>
-          <p>Thanks for Visiting!</p>
-        </blockquote>
+      <section>
+        <h2>Projects</h2>
+
+          <h3>Puzzle Assembly</h3>
+          <p>A 3D puzzle solving game prototype experienced in VR. Like tetris except well, its 3D. Built with Unity and the Oculus SDK, making use of the Interaction SDK to perform the complex hand tracking aspects of the project. Inspired by Cubism.</p>
+
+          <h3>Zombie in your house</h3>
+          <p>Cheesy attempt at building a typical horror game to be experienced in VR. The twist is that the game's background is your actual house! Built mostly to test the Quest 2's video passthrough capabilities. Inspired by better examples such as Hauntify.</p>
+      </section>
+
+      <blockquote>
+        <p>Thanks for Visiting!</p>
+      </blockquote>
     
-      </main>
+    </main>
 
 </body>
 </html>
