--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="dinofavi.ico">
 </head>
 <body>
+
     <canvas class="webgl"></canvas>
 
     <main>
@@ -54,10 +55,16 @@
       <blockquote>
         <p>Thanks for Visiting!</p>
       </blockquote>
+
+      <footer class="footer">
+        <p>2022 Yih Reng Tan &#8226; All Rights Reserved</p>
+        <p>
+          Background by
+          <a href="https://www.vecteezy.com/vector-art/598501-light-blue-vector-low-poly-crystal-background-polygon-design-pa">Vecteezy</a>
+        </p>    
+      </footer>
     
     </main>
-    <!-- <a href="https://www.vecteezy.com/free-vector/blue-poly">Blue Poly Vectors by Vecteezy</a> -->
-    <!-- <a href="https://www.vecteezy.com/free-vector/glass">Glass Vectors by Vecteezy</a> -->
 
 </body>
 </html>
