add puzzle assembly vid

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 
             <h3>Puzzle Assembly</h3>
             <p>A 3D puzzle solving game prototype experienced in VR. Like tetris except well, its 3D. Built with Unity and the Oculus SDK, making use of the Interaction SDK to perform the complex hand tracking aspects of the project. Inspired by Cubism.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/urXRh-L2cA4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <!-- <iframe src="https://www.youtube.com/embed/frpgumADWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
           </div>
           
@@ -57,7 +58,7 @@
       </blockquote>
 
       <footer class="footer">
-        <p>2022 Yih Reng Tan &#8226; All Rights Reserved</p>
+        <p>2022 Yih Reng Tan</p>
         <p>
           Background by
           <a href="https://www.vecteezy.com/vector-art/598501-light-blue-vector-low-poly-crystal-background-polygon-design-pa">Vecteezy</a>
