--- a/src/index.html
+++ b/src/index.html
@@ -37,14 +37,15 @@
           <div class="project-item">
 
             <h3>Puzzle Assembly</h3>
-            <p>A 3D puzzle solving game prototype experienced in VR. Like tetris except well, its 3D. Built with Unity and the Oculus SDK, making use of the Interaction SDK to perform the complex hand tracking aspects of the project. Inspired by Cubism.</p>
+            <p>A 3D puzzle solving game prototype experienced in VR. Like tetris except well, its 3D. Built with Unity and the Oculus SDK, making use of the Interaction SDK to perform the complex hand tracking aspects of the project. Inspired by <a href="https://www.oculus.com/experiences/quest/2264524423619421/">Cubism</a>.</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/urXRh-L2cA4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <!-- <iframe src="https://www.youtube.com/embed/frpgumADWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
           </div>
           
           <div class="project-item">
             <h3>Zombie in your house</h3>
-            <p>Cheesy attempt at building a typical horror game to be experienced in VR. The twist is that the game's background is your actual house! Built mostly to test the Quest 2's video passthrough capabilities. Inspired by better examples such as Hauntify.</p>
+            <p>Cheesy attempt at building a typical horror game to be experienced in VR. The twist is that the game's background is your actual house! Built mostly to test the Quest 2's video passthrough capabilities. Inspired by better examples such as <a href="https://www.oculus.com/experiences/quest/4130979187008353?utm_source=vrsort.com">Hauntify</a>.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qxuBzKvs5g8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <!-- <iframe src="https://www.youtube.com/embed/frpgumADWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></ifrmae> -->
           </div>
           
